--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Heroku - Hello World!</title>
+    <title>Learn Heroku - </title>
   </head>
   <body>
     <h1>VAIDYANATHAN</h1>
