--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Learn Heroku - </title>
   </head>
   <body>
-    <h1>VAIDYANATHAN</h1>
+    <h1>pikachu</h1>
 <style>
 h1 {
   color: teal;
